--- a/Shopify App/Modules/Home/View/BrandsCell/BrandsCollectionViewCell.xib
+++ b/Shopify App/Modules/Home/View/BrandsCell/BrandsCollectionViewCell.xib
@@ -7,6 +7,11 @@
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Roboto-Bold.ttf">
+            <string>Roboto-Bold</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -20,16 +25,25 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="01I-Sb-hJJ" customClass="CardView" customModule="Shopify_App" customModuleProvider="target">
                         <rect key="frame" x="16" y="16" width="184" height="192"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="shoes" translatesAutoresizingMaskIntoConstraints="NO" id="KSd-u8-dIc">
-                                <rect key="frame" x="0.0" y="0.0" width="184" height="192"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="shoes" translatesAutoresizingMaskIntoConstraints="NO" id="KSd-u8-dIc">
+                                <rect key="frame" x="0.0" y="0.0" width="184" height="160"/>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name Of Brand" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MOL-n7-BF6">
+                                <rect key="frame" x="0.0" y="172" width="184" height="20"/>
+                                <fontDescription key="fontDescription" name="Roboto-Bold" family="Roboto" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="KSd-u8-dIc" firstAttribute="top" secondItem="01I-Sb-hJJ" secondAttribute="top" id="cDK-Qp-cTP"/>
-                            <constraint firstAttribute="trailing" secondItem="KSd-u8-dIc" secondAttribute="trailing" id="fFa-mh-tJe"/>
-                            <constraint firstItem="KSd-u8-dIc" firstAttribute="leading" secondItem="01I-Sb-hJJ" secondAttribute="leading" id="qGp-OO-sji"/>
-                            <constraint firstAttribute="bottom" secondItem="KSd-u8-dIc" secondAttribute="bottom" id="z2f-8d-6ZG"/>
+                            <constraint firstItem="MOL-n7-BF6" firstAttribute="leading" secondItem="01I-Sb-hJJ" secondAttribute="leading" id="0LT-Ts-Xu3"/>
+                            <constraint firstItem="MOL-n7-BF6" firstAttribute="top" secondItem="KSd-u8-dIc" secondAttribute="bottom" constant="12" id="4Ph-or-Y3O"/>
+                            <constraint firstAttribute="bottom" secondItem="MOL-n7-BF6" secondAttribute="bottom" id="8wV-Td-LZZ"/>
+                            <constraint firstAttribute="trailing" secondItem="MOL-n7-BF6" secondAttribute="trailing" id="Buc-Ad-VfR"/>
+                            <constraint firstItem="KSd-u8-dIc" firstAttribute="leading" secondItem="01I-Sb-hJJ" secondAttribute="leading" id="JSi-cr-Kwh"/>
+                            <constraint firstAttribute="trailing" secondItem="KSd-u8-dIc" secondAttribute="trailing" id="Nkp-Qj-1mY"/>
+                            <constraint firstItem="KSd-u8-dIc" firstAttribute="top" secondItem="01I-Sb-hJJ" secondAttribute="top" id="zi2-cq-P3P"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -44,8 +58,9 @@
             <size key="customSize" width="228" height="215"/>
             <connections>
                 <outlet property="BrandImage" destination="KSd-u8-dIc" id="JKp-qj-O6A"/>
+                <outlet property="BrandName" destination="MOL-n7-BF6" id="KGo-3S-wXv"/>
             </connections>
-            <point key="canvasLocation" x="274.80916030534348" y="77.816901408450704"/>
+            <point key="canvasLocation" x="274.80916030534348" y="77.464788732394368"/>
         </collectionViewCell>
     </objects>
     <resources>
