--- a/Shopify App/View/Base.lproj/Main.storyboard
+++ b/Shopify App/View/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="NKj-mp-dfK">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="HqV-6c-a8F">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
@@ -1770,7 +1770,7 @@ Just 3 reviews will be displayed, follow a view more button that will navigate h
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="4mn-Wg-Mmc">
-                                <rect key="frame" x="0.0" y="135" width="393" height="683"/>
+                                <rect key="frame" x="0.0" y="189" width="393" height="629"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Vp0-MJ-VPu">
                                     <size key="itemSize" width="128" height="128"/>
@@ -1789,9 +1789,46 @@ Just 3 reviews will be displayed, follow a view more button that will navigate h
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Vendor" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nOx-Vh-xd1">
-                                <rect key="frame" x="0.0" y="103" width="393" height="32"/>
-                                <fontDescription key="fontDescription" name="Roboto-Bold" family="Roboto" pointSize="27"/>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="0Fv-Q6-e0Y">
+                                <rect key="frame" x="60" y="103" width="259" height="56"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="259" id="crJ-gG-naI"/>
+                                </constraints>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="frX-f1-Kq4" id="3pI-nG-V8S"/>
+                                </connections>
+                            </searchBar>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="1" maxValue="300" translatesAutoresizingMaskIntoConstraints="NO" id="qOw-h0-erf">
+                                <rect key="frame" x="29" y="159" width="314" height="31"/>
+                                <color key="tintColor" name="mainColor"/>
+                                <color key="thumbTintColor" name="mainColor"/>
+                                <connections>
+                                    <action selector="filterSlider:" destination="frX-f1-Kq4" eventType="valueChanged" id="ypg-U6-QCv"/>
+                                </connections>
+                            </slider>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Upz-RR-t0i" userLabel="Minimum Price">
+                                <rect key="frame" x="7" y="163.66666666666666" width="21" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cLK-2r-sVY">
+                                <rect key="frame" x="7" y="116" width="40" height="30"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="priceSort"/>
+                                <connections>
+                                    <action selector="filterButtonByPrice:" destination="frX-f1-Kq4" eventType="touchUpInside" id="jNK-Yg-RAl"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R6A-2X-ExP">
+                                <rect key="frame" x="332" y="116" width="54" height="30"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="filter"/>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$300" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7xx-iF-WQE" userLabel="Minimum Price">
+                                <rect key="frame" x="344" y="163.66666666666666" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -1799,29 +1836,50 @@ Just 3 reviews will be displayed, follow a view more button that will navigate h
                         <viewLayoutGuide key="safeArea" id="ZLS-DW-ozj"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="qOw-h0-erf" firstAttribute="top" secondItem="0Fv-Q6-e0Y" secondAttribute="bottom" id="0uh-HH-eYe"/>
+                            <constraint firstItem="4mn-Wg-Mmc" firstAttribute="bottom" secondItem="ZLS-DW-ozj" secondAttribute="bottom" id="1fM-eC-nBb"/>
+                            <constraint firstItem="R6A-2X-ExP" firstAttribute="centerY" secondItem="0Fv-Q6-e0Y" secondAttribute="centerY" id="29F-XO-LZd"/>
+                            <constraint firstItem="R6A-2X-ExP" firstAttribute="leading" secondItem="0Fv-Q6-e0Y" secondAttribute="trailing" constant="13" id="54H-XB-uoa"/>
+                            <constraint firstItem="0Fv-Q6-e0Y" firstAttribute="leading" secondItem="cLK-2r-sVY" secondAttribute="trailing" constant="13" id="8jQ-Ro-Sdc"/>
+                            <constraint firstItem="0Fv-Q6-e0Y" firstAttribute="top" secondItem="ZLS-DW-ozj" secondAttribute="top" id="AkH-1h-pFs"/>
+                            <constraint firstItem="4mn-Wg-Mmc" firstAttribute="trailing" secondItem="ZLS-DW-ozj" secondAttribute="trailing" id="CTO-TJ-957"/>
                             <constraint firstItem="4mn-Wg-Mmc" firstAttribute="trailing" secondItem="ZLS-DW-ozj" secondAttribute="trailing" id="CTx-yn-WZr"/>
-                            <constraint firstItem="nOx-Vh-xd1" firstAttribute="trailing" secondItem="ZLS-DW-ozj" secondAttribute="trailing" id="GgM-Yb-z3F"/>
-                            <constraint firstItem="4mn-Wg-Mmc" firstAttribute="top" secondItem="nOx-Vh-xd1" secondAttribute="bottom" id="Knx-aT-9Gh"/>
-                            <constraint firstItem="4mn-Wg-Mmc" firstAttribute="top" secondItem="nOx-Vh-xd1" secondAttribute="bottom" id="Xa6-ck-NnL"/>
-                            <constraint firstItem="nOx-Vh-xd1" firstAttribute="top" secondItem="ZLS-DW-ozj" secondAttribute="top" id="ZHL-Ke-lqL"/>
+                            <constraint firstItem="4mn-Wg-Mmc" firstAttribute="leading" secondItem="ZLS-DW-ozj" secondAttribute="leading" id="FyY-MB-lye"/>
+                            <constraint firstItem="Upz-RR-t0i" firstAttribute="centerY" secondItem="qOw-h0-erf" secondAttribute="centerY" id="NMP-cA-3oI"/>
+                            <constraint firstItem="qOw-h0-erf" firstAttribute="leading" secondItem="Upz-RR-t0i" secondAttribute="trailing" constant="3" id="Sgc-gO-hGo"/>
+                            <constraint firstItem="4mn-Wg-Mmc" firstAttribute="top" secondItem="qOw-h0-erf" secondAttribute="bottom" id="UeL-Yv-0bn"/>
+                            <constraint firstItem="7xx-iF-WQE" firstAttribute="centerY" secondItem="qOw-h0-erf" secondAttribute="centerY" id="WXw-GT-uqx"/>
                             <constraint firstItem="4mn-Wg-Mmc" firstAttribute="bottom" secondItem="ZLS-DW-ozj" secondAttribute="bottom" id="Zri-Cv-9Lt"/>
-                            <constraint firstItem="nOx-Vh-xd1" firstAttribute="leading" secondItem="ZLS-DW-ozj" secondAttribute="leading" id="ZsI-XV-zHH"/>
+                            <constraint firstItem="ZLS-DW-ozj" firstAttribute="trailing" secondItem="R6A-2X-ExP" secondAttribute="trailing" constant="7" id="aDM-gf-F6P"/>
+                            <constraint firstItem="cLK-2r-sVY" firstAttribute="centerY" secondItem="0Fv-Q6-e0Y" secondAttribute="centerY" id="adt-qw-sBC"/>
+                            <constraint firstItem="cLK-2r-sVY" firstAttribute="leading" secondItem="ZLS-DW-ozj" secondAttribute="leading" constant="7" id="c1L-zE-tt2"/>
                             <constraint firstItem="4mn-Wg-Mmc" firstAttribute="leading" secondItem="ZLS-DW-ozj" secondAttribute="leading" id="sRk-IH-kym"/>
+                            <constraint firstItem="7xx-iF-WQE" firstAttribute="leading" secondItem="qOw-h0-erf" secondAttribute="trailing" constant="3" id="uBY-cx-0zh"/>
+                            <constraint firstItem="ZLS-DW-ozj" firstAttribute="trailing" secondItem="7xx-iF-WQE" secondAttribute="trailing" constant="7" id="uiM-ow-Wld"/>
+                            <constraint firstItem="Upz-RR-t0i" firstAttribute="leading" secondItem="ZLS-DW-ozj" secondAttribute="leading" constant="7" id="z9z-X4-8z3"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="Cu4-Bd-IQC">
                         <rightBarButtonItems>
                             <barButtonItem title="Item" image="favorite" id="7PG-KU-q00">
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <action selector="toWishlistButton:" destination="frX-f1-Kq4" id="XC5-12-8FH"/>
+                                </connections>
                             </barButtonItem>
                             <barButtonItem title="Item" image="shopping-bag" id="BRb-V7-j96">
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <action selector="toCartButton:" destination="frX-f1-Kq4" id="TSo-Mc-P38"/>
+                                </connections>
                             </barButtonItem>
                         </rightBarButtonItems>
                     </navigationItem>
                     <connections>
                         <outlet property="ProductOfBrandsCollection" destination="4mn-Wg-Mmc" id="bRQ-yp-6EB"/>
-                        <outlet property="vendorName" destination="nOx-Vh-xd1" id="kyQ-lL-Bsc"/>
+                        <outlet property="maximumPrice" destination="7xx-iF-WQE" id="ei8-jK-F2Q"/>
+                        <outlet property="minimumPrice" destination="Upz-RR-t0i" id="foL-eP-Z9X"/>
+                        <outlet property="priceSlider" destination="qOw-h0-erf" id="G6Z-Ar-yKJ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1KP-lP-9cz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
